--- a/atividade 26-09/package.json
+++ b/atividade 26-09/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "App.js",
   "scripts": {
+    "dev": "next dev",
     "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
